readd hw chap & set author field for all refs

--- a/doc/tcc.bib
+++ b/doc/tcc.bib
@@ -87,8 +87,8 @@
 }
 
 @online {i2c,
-	organization = {Wikipedia},
 	author = {Wikipedia},
+	organization = {Wikipedia},
 	title  = {I2C},
 	day    = {04},
 	month  = {10},
@@ -98,6 +98,7 @@
 }
 
 @online {i2c_structure,
+	author = {Circuit Basics},
 	organization = {Circuit Basics},
 	title  = {BASICS OF THE I2C COMMUNICATION PROTOCOL},
 	day    = {13},
@@ -108,6 +109,7 @@
 }
 
 @online {uart,
+	author = {codrey},
 	organization = {Codrey},
 	title  = {UART Communication Protocol – How it works?},
 	day    = {16},
@@ -118,6 +120,7 @@
 }
 
 @online {sensores_iot,
+	author = {embarcados},
 	organization = {Embarcados},
 	title  = {Sensores e Atuadores IoT},
 	day    = {24},
@@ -128,6 +131,7 @@
 }
 
 @online {BH1750,
+	author = {imasters},
 	organization = {iMasters},
 	title  = {Como funciona o sensor de luz BH1750},
 	day    = {31},
@@ -138,6 +142,7 @@
 }
 
 @online {BH1750_shop,
+	author = {reichelt},
 	organization = {reichelt},
 	title  = {DEBO BH 1750 Developer Boards - Digital Light Sensor, BH1750},
 	url    = {https://cdn-reichelt.de/bilder/web/artikel_ws/A300/GY-302_1.jpg},
@@ -145,6 +150,7 @@
 }
 
 @online {dht11_pinout,
+	author = {MAXPHI},
 	organization = {MaxPhi},
 	title  = {DHT11 Humidity \& Temperature Sensor Arduino Tutorial},
 	day    = {31},
@@ -154,7 +160,7 @@
 	urldate = {2020-09-29}
 }
 
-@article{ElixirorIoT,
+@article {ElixirorIoT,
 	author={G. {Fedrecheski} and L. C. P. {Costa} and M. K. {Zuffo}},
 	booktitle={2016 IEEE International Symposium on Consumer Electronics (ISCE)},
 	title={Elixir programming language evaluation for IoT},
@@ -165,7 +171,7 @@
 	doi={10.1109/ISCE.2016.7797392}
 }
 
-@INPROCEEDINGS{IoTeveryone,
+@INPROCEEDINGS {IoTeveryone,
 	author={D. {Pathirana} and S. {Sonnadara} and M. {Hettiarachchi} and H. {Siriwardana} and C. {Silva}},
 	booktitle={2017 Moratuwa Engineering Research Conference (MERCon)},
 	title={WireMe - IoT development platform for everyone},
@@ -176,7 +182,7 @@
 	doi={10.1109/MERCon.2017.7980463}
 }
 
-@INPROCEEDINGS{3layers,
+@INPROCEEDINGS {3layers,
 	author={Q. L. {Chen} and Y. H. {Feng}},
 	booktitle={2015 10th International Conference on Information, Communications and Signal Processing (ICICS)},
 	title={The design and application of the online bookstore system .Net based on three tier architecture},
@@ -187,7 +193,7 @@
 	doi={10.1109/ICICS.2015.7459824}
 }
 
-@INPROCEEDINGS{16,
+@INPROCEEDINGS {16,
 	author={B. M. {Adam} and A. {Rachmat Anom Besari} and M. M. {Bachtiar}},
 	booktitle={2019 International Electronics Symposium (IES)},
 	title={Backend Server System Design Based on REST API for Cashless Payment System on Retail Community},
@@ -198,7 +204,7 @@
 	doi={10.1109/ELECSYM.2019.8901668}
 }
 
-@INPROCEEDINGS{19,
+@INPROCEEDINGS {19,
 	author={B. {Costa} and P. F. {Pires} and F. C. {Delicato} and P. {Merson}},
 	booktitle={2014 IEEE/IFIP Conference on Software Architecture},
 	title={Evaluating a Representational State Transfer (REST) Architecture: What is the Impact of REST in My Architecture?},
@@ -254,6 +260,7 @@
 }
 
 @online {agile,
+	author = {ghunter},
 	organization = {Geek Hunter},
 	title  = {Metodologia Agile, Scrum e Kanban},
 	day    = {16},
@@ -263,7 +270,7 @@
 	urldate = {2020-09-29}
 }
 
-@INPROCEEDINGS{seguranca,
+@INPROCEEDINGS {seguranca,
 	author={Z. {Zhang} and M. C. Y. {Cho} and C. {Wang} and C. {Hsu} and C. {Chen} and S. {Shieh}},
 	booktitle={2014 IEEE 7th International Conference on Service-Oriented Computing and Applications},
 	title={IoT Security: Ongoing Challenges and Research Opportunities},
