--- a/layout.tex
+++ b/layout.tex
@@ -29,7 +29,7 @@
 
 \subfile{doc/chapter/introducao.tex}
 \subfile{doc/chapter/fundamentacao.tex}
-%\subfile{doc/chapter/hardware.tex}
+\subfile{doc/chapter/hardware.tex}
 %\subfile{doc/chapter/metodo.tex}
 %\subfile{doc/chapter/consideracoes.tex}
 
