rm extra spaces in text, add remaining chapters

--- a/layout.tex
+++ b/layout.tex
@@ -7,7 +7,7 @@
 
 \author{
 	Henrique da Silva Casares\\
- 	Vinicius Lopes Silva\\
+	Vinicius Lopes Silva\\
 	Lucas Campos Martins Ferreira Braga\\
 }
 \orientador{Prof. Dr. Victor Sonnenberg}
@@ -30,8 +30,8 @@
 \subfile{doc/chapter/introducao.tex}
 \subfile{doc/chapter/fundamentacao.tex}
 \subfile{doc/chapter/hardware.tex}
-%\subfile{doc/chapter/metodo.tex}
-%\subfile{doc/chapter/consideracoes.tex}
+\subfile{doc/chapter/metodo.tex}
+\subfile{doc/chapter/consideracoes.tex}
 
 \nocite{*}
 \printbibliography[title=Referências]
