fix resumo e abstract

--- a/doc/abnt/abstract.tex
+++ b/doc/abnt/abstract.tex
@@ -3,7 +3,12 @@
 \begin{document}
 \begin{resumo}[Abstract]
 \hspace*{3em}
-Today's technology allows people to connect to each other and between smart devices, such as cell phones, computers and controllers. With the increase in this demand, people began to use more and more of these devices not only at home, but also in markets, malls and hospitals. It is evident how they are connected to each other via the internet and are able to exchange information in a fraction of a second. Therefore, research in this area of connected devices have a great value to ease daily lives of people and businesses. The concept of being able to control these devices can go beyond activating a relay or turning on a led, but being able to apply data analysis with modern technologies such as Big Data and Artificial Intelligence. This model is called IoT (Internet of Things) and it is exactly what we focus on our project, aiming to develop a system that includes connectivity for the end user when using smart devices connected to each other, with a friendly interface for control without the dependence on third-party services, even if the user doesn't have any knowledge in programming or electronics. The methods used to create this solution were chosen based on the practicality, efficiency and applicability of the tools and mainly the knowledge acquired during our course.
+The communication technologies changed the way people live by allowing them to connect to each other through easy to carry and easy to use electronic devices such as computers and smartphones.
+Once proven the efficiency and convenience of those devices, their use got expanded to include communication with systems of different purposes located at supermarkets, malls and hospitals.
+Therefore, research in this field of connected device are of great value for people and businesses.
+The use of these devices are not limited to driving electric loads and can even reach the fields of mass data analysis (Big Data) and Artificial Intelligence.
+This model of connected devices is called IoT (Internet of Things) and is the base for our project, which aims to develop a system to ease the use of connected devices for the end user, with a friendly user interface for control without dependencies on third party solutions and without requiring a lot of knowledge in programming and electronics from the user.
+The methods used to create this solution were chosen based in pragmatism, efficiency and applicability of the tools and mainly in the knowledge acquired during the graduation.
 \vspace{\onelineskip}
 
 \noindent
